# orders_rust_api

./: Cargo.toml  README.md  start.sh
src/: main.rs  openapi.rs
src/handlers/: handlers.rs  handlers.tests.rs  mod.rs
src/routes/: mod.rs  routes.rs  routes.tests.rs
src/utils/: db_utils.rs  mod.rs
src/validators/: mod.rs  order_validator.rs  order_validator.tests.rs
